# sqm

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.orig  README.md  copyfiles.sh  download_binaries.py  find_gcc_lib.py  find_libquadmath.py
ci/: after_success.sh  common.sh  install.sh  script.sh
conda/sqm/: bld.bat  build.sh  meta.yaml
src/arpack/: CMakeLists.txt
src/blas/: CMakeLists.txt
src/lapack/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/sff/: CMakeLists.txt
src/sqm/: CMakeLists.txt  makedepend  qm2_calc_dipole.F90  qm2_load_params_and_allocate.F90  qm2_print_bondorders.F90  qm2_read_nm_and_alloc.F90  qm2_scf.F90  qmmm_module.F90  sqm.F90
test/: check_slko_files.x  common.sh  dacdif
test/sqm/c2h2/: Run  run.sh
test/sqm/ch3f/: Run  run.sh
test/sqm/dftb3/: Run  cysdip.go.in  cysdip.go.out.save  cysdip.sp.in  cysdip.sp.out.save  h2o.go.in  h2o.go.out.save  h2o.sp.in  h2o.sp.out.save  lignin.sp.in  lignin.sp.out.save  run.sh
test/sqm/dhplus/: Run  run.sh
test/sqm/external_charges/: Run  run.sh
test/sqm/fecp2/: Run  run.sh
test/sqm/h2s/: Run
test/sqm/nma/: Run  run.sh
test/sqm/znh+/: Run  run.sh
